--- a/src/component/Header/header.module.css
+++ b/src/component/Header/header.module.css
@@ -22,6 +22,7 @@
   color: rgb(255, 255, 255);
 
   border-radius: 0px;
+  border: 3px dotted transparent;
 }
 #Header_Button:hover {
   background-color: rgb(0, 98, 209);
