--- a/src/component/main.module.css
+++ b/src/component/main.module.css
@@ -2,11 +2,13 @@
   width: 90%;
   min-height: 90vh;
 
-  margin-top: -10px;
+  margin-top: -8px;
   margin-left: 5%;
 
+  position: relative;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   background-color: aliceblue;
 }
