--- a/src/component/Home/home.module.css
+++ b/src/component/Home/home.module.css
@@ -29,12 +29,12 @@
 }
 
 :root {
-  --arrowColor: rgb(158, 158, 158);
+  --LengthColor: rgb(158, 158, 158);
 }
 
-#ArrowBox{
+#LengthBox{
   display: flex;
-  position: relative;
+  position: absolute;
   width: fit-content;
   margin-left: calc(100% - 300px);
 
@@ -42,17 +42,17 @@
   transform: rotate(-20deg);
 }
 
-#Arrow {
+#Length {
   width: 7.5px;
   height: 0px;
 
-  border-color: var(--arrowColor);
+  border-color: var(--LengthColor);
   border-style: solid;
   border-width: 0px;
   border-left-width: 2px;
   border-right-width: 2px;
 
-  animation-name: ArrowLength;
+  animation-name: LengthLength;
   animation-fill-mode: forwards;
   animation-duration: 6s;
 
@@ -60,23 +60,20 @@
   animation-direction: normal;
 }
 
-@keyframes ArrowLength {
+@keyframes LengthLength {
   100% {
-    height: 300px
+    height: 100vh
   }
 }
 
-#ArrowText {
+#LengthText {
   display: block;
   margin-top: 75px;
   margin-left: 20px;
 
-  width:fit-content;
-  height: fit-content;
-
   overflow: hidden;
 
-  animation-name: TextBaox;
+  animation-name: TextBox;
   animation-fill-mode: forwards;
   animation-duration: 6s;
 
@@ -84,16 +81,19 @@
   animation-direction: normal;
 }
 @keyframes TextBox {
-  90% {
-    transform: rotate(0deg);
+  0% {
+    opacity: 0;
   }
-  100% {
-    transform: rotate(20deg);
+  85% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 1;
   }
 }
 
 
-#ArrowText p {
+#LengthText p {
   transform: rotate(0deg);
 
   animation-name: TextDraw;
@@ -112,23 +112,23 @@
   }
 }
 
-.Arrow_Text1 {
+.Length_Text1 {
   width: fit-content;
 
   font-size: 18px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial NLength', Arial, sans-serif;
   
   user-select: none;
 
   
 }
-.Arrow_Text1:hover {
+.Length_Text1:hover {
   color: rgb(145, 145, 145);
 }
-.Arrow_Text1:hover::after {
+.Length_Text1:hover::after {
   width: 100%
 }
-.Arrow_Text1::after {
+.Length_Text1::after {
   content: "";
   display: block;
   width: 0px;
@@ -142,6 +142,46 @@
   
   transition: 1.0s ;
 }
-.Arrow_Text2 {
+.Length_Text2 {
   user-select: none;
+}
+
+.TextBox {
+  margin-left: 20px;
+  margin-top: 30%;
+  width: 200px;
+}
+.TextBox p{
+  user-select: none;
+}
+
+.SelfText {
+  font-size: 18px;
+  font-family:'Courier New', Courier, monospace;
+  font-weight: bold;
+
+}
+.EnglishText {
+  margin-top: -10px;
+  margin-left: 30px;
+
+  font-size: 12px;
+  font-family: 'Courier New', Courier, monospace;
+  color: rgb(105, 105, 105);
+
+  animation-name: EnglishDraw;
+  animation-fill-mode: forwards;
+  animation-duration: 2s;
+
+  animation-timing-function: ease;
+  animation-direction: normal;
+}
+
+@keyframes EnglishDraw {
+  0% {
+    transform: rotateX(-90deg);
+  }
+  100% {
+    transform: rotateX(360deg);
+  }
 }
