--- a/src/component/Home/home.module.css
+++ b/src/component/Home/home.module.css
@@ -36,6 +36,7 @@
   display: flex;
   position: absolute;
   width: fit-content;
+  height: 100%;
   margin-left: calc(100% - 300px);
 
   transform-origin: 0px 0px;
@@ -62,7 +63,7 @@
 
 @keyframes LengthLength {
   100% {
-    height: 100vh
+    height: 105%
   }
 }
 
@@ -150,6 +151,8 @@
   margin-left: 20px;
   margin-top: 30%;
   width: 200px;
+
+  z-index: 1;
 }
 .TextBox p{
   user-select: none;
